alterando para clean architecture